--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,23 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Göteborgs atletklubb</title>
+    <title>Göteborgs Atletklubb</title>
 </head>
 <body>
-    <nav class="navbar">
-        <a class="logo" href="#">GÖTEBORGS ATLETKLUBB</a>
-        <ul class="nav-links">
-            <input type="checkbox" id="checkbox_toggle">
-            <label for="checkbox_toggle"class="hamburger"><span class="hamburger-line"></span></label>
-            <div class="menu">
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="nyheter.html">Nyheter</a></li>
-                <li><a href="om_foreningen.html">Om föreningen</a></li>
-            </div>
+    <nav>
+        <div class="logo"><img id="loggan" src="/img/download-removebg-preview (1).png" alt=""></div>
+        <ul>
+            <li><a href="#">Hem</a></li>
+
+            <li>
+                <a href="#">Nyheter</a>
+                <ul>
+                    <li><a href="#">Våra Nyheter</a></li>
+                    <li><a href="#">SBF Nyheter</a></li>
+                    <li><a href="#">Stadslag Nyheter</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Träningstider</a>
+                <ul>
+                    <li><a href="#">Nybörjargruppen</a></li>
+                    <li><a href="#">Brottarskolan</a></li>
+                    <li><a href="#">Tävlingsgruppen</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Om föreningen</a></li>
+            <li><a href="#">Kontakt</a></li>
+
+
+
         </ul>
     </nav>
+    
 </body>
 </html>
-
-
-<!--Försök att ta bort hamburger-line när den är på desktop till nästa gång-->
